--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -12,7 +12,7 @@
         },
         "default_popup": "popup.html"
     },
-    "options_page": "popup.html",
+    "options_page": "options.html",
     "content_scripts": [
         {
             "matches": [
@@ -21,6 +21,9 @@
             ],
             "js": [
                 "content_script_canny.js"
+            ],
+            "css": [
+                "content_script_canny.css"
             ]
         }
     ]
