--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -4,11 +4,11 @@
     "description": "A helper tool for VRChat feedback boards on Canny.",
     "version": "1.0",
     "icons": {
-        "128": "/images/3d_peng128.png"
+        "128": "/images/icon1_128.png"
     },
     "action": {
         "default_icon": {
-            "128": "/images/3d_peng128.png"
+            "128": "/images/icon1_128.png"
         },
         "default_popup": "popup.html"
     },
