--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -6,11 +6,20 @@
     "icons": {
         "128": "/images/icon1_128.png"
     },
-    "browser_action": {
+    "page_action": {
         "default_icon": {
             "128": "/images/icon1_128.png"
         },
+        "show_matches": [
+            "https://feedback.vrchat.com/*",
+            "https://*.canny.io/*"
+        ],
         "default_popup": "popup.html"
+    },
+    "background": {
+        "scripts": [
+            "background.js"
+        ]
     },
     "options_ui": {
         "page": "options.html",
