Add a feature of stored default settings
We decided to use popup to edit default settings because it is the same of current session settings. So now, the option page uses the popup page as an iframe-ed window. And the popup handles both settings as in slightly different modes. The background script serves default settings.

--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -33,7 +33,6 @@
         {
             "matches": [
                 "https://*.canny.io/*",
-
                 // One of user company VRChat inc. uses their domain for primary URL of feedback boards.
                 // It is another name of https://vrchat.canny.io
                 "https://feedback.vrchat.com/*"
@@ -45,5 +44,8 @@
                 "content_script_canny.css"
             ]
         }
+    ],
+    "permissions": [
+        "storage"
     ]
 }
